提交代码，实现横竖屏切换，不影响播放。

--- a/res/layout/activity_vedio.xml
+++ b/res/layout/activity_vedio.xml
@@ -1,16 +1,68 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.base.vedio.Vedio" >
+    android:background="#000000" >
 
-    <TextView
+    <SurfaceView
+        android:id="@+id/activity_vedio_surfaceView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_gravity="center_horizontal" >
+    </SurfaceView>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="4.0dip"
+            android:orientation="horizontal" >
+
+            <Button
+                android:id="@+id/activity_vedio_playurl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_vedio_title" >
+            </Button>
+
+            <Button
+                android:id="@+id/activity_vedio_pause"
+                android:layout_width="80dip"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_vedio_pause" >
+            </Button>
+
+            <Button
+                android:id="@+id/activity_vedio_stop"
+                android:layout_width="80dip"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_vedio_stop" >
+            </Button>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dip"
+            android:orientation="horizontal" >
+
+            <SeekBar
+                android:id="@+id/activity_vedio_skbProgress"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1.0"
+                android:max="100"
+                android:paddingLeft="10dip"
+                android:paddingRight="10dip" >
+            </SeekBar>
+        </LinearLayout>
+    </LinearLayout>
+
+</FrameLayout>
