--- a/res/layout/activity_vedio.xml
+++ b/res/layout/activity_vedio.xml
@@ -6,8 +6,8 @@
 
     <SurfaceView
         android:id="@+id/activity_vedio_surfaceView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal" >
     </SurfaceView>
 
