--- a/res/layout/activity_vedio.xml
+++ b/res/layout/activity_vedio.xml
@@ -16,8 +16,8 @@
 
             <SurfaceView
                 android:id="@+id/activity_vedio_surfaceView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal" >
             </SurfaceView>
         </io.vov.vitamio.widget.CenterLayout>
@@ -26,60 +26,55 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:orientation="vertical" >
+            android:orientation="horizontal" >
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="4.0dip"
-                android:orientation="horizontal" >
+         <ImageButton
+            android:id="@+id/activity_vedio_play_pause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/mediacontroller_button"
+            android:contentDescription="@string/mediacontroller_play_pause"
+            android:src="@drawable/mediacontroller_pause" />
+        <ImageButton
+            android:id="@+id/activity_vedio_play_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/activity_vedio_play_pause" 
+            android:background="@drawable/mediacontroller_button"
+            android:contentDescription="@string/mediacontroller_play_pause"
+            android:src="@drawable/mediacontroller_normal_next" />
 
-                <Button
-                    android:id="@+id/activity_vedio_playurl"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/activity_vedio_title" >
-                </Button>
+        <TextView
+            android:id="@+id/activity_vedio_time_current"
+            style="@style/MediaController_Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@id/activity_vedio_play_next" />
 
-                <Button
-                    android:id="@+id/activity_vedio_pause"
-                    android:layout_width="80dip"
-                    android:layout_height="wrap_content"
-                    android:text="@string/activity_vedio_pause" >
-                </Button>
+        <TextView
+            android:id="@+id/activity_vedio_time_total"
+            style="@style/MediaController_Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dp" />
 
-                <Button
-                    android:id="@+id/activity_vedio_stop"
-                    android:layout_width="80dip"
-                    android:layout_height="wrap_content"
-                    android:text="@string/activity_vedio_stop" >
-                </Button>
-
-                <Button
-                    android:id="@+id/activity_vedio_change"
-                    android:layout_width="80dip"
-                    android:layout_height="wrap_content"
-                    android:text="@string/activity_video_change" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dip"
-                android:orientation="horizontal" >
-
-                <SeekBar
-                    android:id="@+id/activity_vedio_skbProgress"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1.0"
-                    android:max="100"
-                    android:paddingLeft="10dip"
-                    android:paddingRight="10dip" >
-                </SeekBar>
-            </LinearLayout>
+        <SeekBar
+            android:id="@+id/activity_vedio_skbProgress"
+            style="@style/MediaController_SeekBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/activity_vedio_time_total"
+            android:layout_toRightOf="@id/activity_vedio_time_current"
+            android:focusable="true"
+            android:max="1000" />
         </LinearLayout>
     </android.gesture.GestureOverlayView>
 
